# print-bridge

./: .gitignore  .prettierrc.cjs  README.md  commitlint.config.cjs  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: release.yml  security.yml
.husky/: pre-push
scripts/: dev-server.mjs  dev.mjs  run-tauri.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  pairing.rs  server.rs  types.rs
src-tauri/src/adapters/: mod.rs  serial.rs  tcp.rs  usb.rs  win_usb.rs
