[package]
name = "soluciona-print-bridge"
version = "0.1.0"
description = "Cegel Print Bridge — daemon local ESC/POS"
authors = ["Cegel"]
edition = "2021"

[lib]
name = "soluciona_print_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }

# HTTP client (pairing + heartbeat hacia el backend de Cegel)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Hostname
gethostname = "0.4"

# Adapters
rusb = "0.9"           # USB (libusb)
serialport = "4"       # Serial

# Utilidades
base64 = "0.22"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
